# SnipPyLogTool

./: .gitignore  Cargo.toml
resources/snippy_log_4-4_14-34/: 0_editor_state.py  0_synth_example.json  1_synth_example.json  2_editor_state.py  2_synth_example.json  3_editor_state.py  3_synth_example.json  4_editor_state.py  5_editor_state.py  5_synth_example.json  6_editor_state.py  6_synth_example.json  7_synth_example.json  8_editor_state.py  8_synth_example.json  9_editor_state.py  9_synth_example.json
src/: main.rs
src/log/: log_event.rs  log_file.rs  mod.rs
