[package]
name = "snippy_log_tool"
version = "0.1.0"
authors = ["Kasra Ferdowsifard <kferdowsifard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1"
zip_option = { path = "../../ZipOption" }